Add fragments of image player as fragment and make file fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/parentFolder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="parent folder"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerDisk"
+    <FrameLayout
+        android:id="@+id/fileFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="horizontal|vertical"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:layout_below="@id/parentFolder"
-        android:background="#fff"/>
-
+        android:layout_height="match_parent">
+    </FrameLayout>
 </RelativeLayout>
