--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,16 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">2dp</item>
     </style>
+
+    <style name="text_menu">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+<!--        <item name="android:padding">@dimen/t10dp</item>-->
+        <item name="android:textSize">@dimen/t20sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="text_menu2" parent="text_menu">
+        <item name="android:padding">@dimen/t5dp</item>
+        <item name="android:textSize">@dimen/t14sp</item>
+    </style>
 </resources>
