--- a/app/src/main/res/layout/view_file_row.xml
+++ b/app/src/main/res/layout/view_file_row.xml
@@ -59,7 +59,7 @@
         android:layout_toRightOf="@id/itemThumb" />
 
     <TextView
-        android:id="@+id/itemName"
+        android:id="@+id/itemTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -72,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/itemV1"
-        android:layout_below="@id/itemName"
+        android:layout_below="@id/itemTitle"
         tools:text="information"
         />
 
