--- a/app/src/main/res/layout/dialog_rename.xml
+++ b/app/src/main/res/layout/dialog_rename.xml
@@ -24,6 +24,7 @@
             android:id="@+id/itemInput"
             style="@style/text_menu"
             android:hint="Enter Text"
+            android:inputType="text"
             android:textColorHint="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
