--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
         <item name="android:padding">@dimen/t5dp</item>
         <item name="android:textSize">@dimen/t18sp</item>
     </style>
+    <style name="text_menu2.MP">
+        <item name="android:padding">@dimen/t10dp</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
 </resources>
