add codes for fixing sorting, implement selection, delete in multiselected, using PopupMenu instead of PopupWindow to fix the dialog out of bound issue

--- a/app/src/main/res/layout/fragment_file.xml
+++ b/app/src/main/res/layout/fragment_file.xml
@@ -36,6 +36,10 @@
                 android:id="@+id/sortBtn"
                 style="@style/button"
                 android:text="@string/sort"/>
+            <Button
+                android:id="@+id/deleteBtn"
+                style="@style/button"
+                android:text="@string/file_menu_delete"/>
         </LinearLayout>
     </HorizontalScrollView>
     <androidx.recyclerview.widget.RecyclerView
