--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,27 +7,58 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <HorizontalScrollView
         android:id="@+id/topBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/backBtn"
-            android:layout_width="@dimen/t50dp"
-            android:layout_height="@dimen/t50dp"
-            android:background="@color/yellow"
-            android:src="@drawable/ic_arrow_back"/>
-        <ImageView
-            android:id="@+id/usageStats"
-            android:layout_width="@dimen/t50dp"
-            android:layout_height="@dimen/t50dp"
-            android:background="@color/yellow"
-            android:rotation="90"
-            android:src="@drawable/ic_arrow_back"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/backBtn"
+                android:layout_width="@dimen/t50dp"
+                android:layout_height="@dimen/t50dp"
+                android:background="@color/yellow"
+                android:src="@drawable/ic_arrow_back"/>
+            <ImageView
+                android:id="@+id/usageStats"
+                android:layout_width="@dimen/t50dp"
+                android:layout_height="@dimen/t50dp"
+                android:background="@color/yellow"
+                android:rotation="90"
+                android:src="@drawable/ic_arrow_back"/>
+            <ImageView
+                android:id="@+id/spaceIntent"
+                android:layout_width="@dimen/t50dp"
+                android:layout_height="@dimen/t50dp"
+                android:src="@drawable/ms_xls"/>
+            <TextView
+                android:id="@+id/myStorage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="My page\nfor access\nall files"/>
+            <TextView
+                android:id="@+id/allOwners"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="App list\nfor access\nall files"/>
+            <TextView
+                android:id="@+id/clearCache"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/t10dp"
+                android:text="Clear\nCache\nFile"/>
+            <TextView
+                android:id="@+id/clearCacheIntent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/t10dp"
+                android:text="Clear\nCache\nIntent"/>
+        </LinearLayout>
+    </HorizontalScrollView>
 
     <FrameLayout
         android:id="@+id/fileFragment"
