--- a/app/src/main/res/layout/view_path_item.xml
+++ b/app/src/main/res/layout/view_path_item.xml
@@ -10,8 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:padding="@dimen/t5dp"
-        android:background="@drawable/bg_rect_blue"
+        android:padding="@dimen/t10dp"
+        android:background="@drawable/bg_ripple_grey"
         tools:text="folder"/>
 
 </LinearLayout>
