--- a/app/src/main/res/layout/dialog_rename.xml
+++ b/app/src/main/res/layout/dialog_rename.xml
@@ -2,8 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:padding="@dimen/t10dp"
     android:background="#d000">
 
@@ -11,7 +11,6 @@
         android:id="@+id/itemContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/t10dp"
         android:orientation="vertical">
 
         <TextView
@@ -25,7 +24,9 @@
             style="@style/text_menu"
             android:hint="Enter Text"
             android:inputType="text"
-            android:textColorHint="@color/white"
+            tools:text="@string/actionCreateFolder"
+            android:textColor="#ddd"
+            android:textColorHint="#888"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
@@ -36,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/itemContent"
         android:layout_alignParentRight="true"
-        android:text="OK"/>
+        android:text="@string/ok"/>
 
     <Button
         android:id="@+id/itemCancel"
@@ -44,6 +45,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/itemContent"
         android:layout_alignTop="@id/itemOK"
-        android:text="Cancel"/>
+        android:text="@string/cancel"/>
 
 </RelativeLayout>
