--- a/app/src/main/res/layout/view_file_row.xml
+++ b/app/src/main/res/layout/view_file_row.xml
@@ -6,68 +6,80 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_ripple_grey">
 
-    <ImageView
-        android:id="@+id/itemThumb"
-        android:layout_width="@dimen/t50dp"
-        android:layout_height="@dimen/t50dp"
-        android:padding="2dp"
-        android:src="@mipmap/ic_launcher" />
-
-    <RelativeLayout
-        android:id="@+id/itemActions"
-        android:layout_width="@dimen/t40dp"
-        android:layout_height="@dimen/t40dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true">
+    <LinearLayout
+        android:id="@+id/itemMain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/itemAction"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:src="@drawable/more_vert"/>
+            android:id="@+id/itemThumb"
+            android:layout_width="@dimen/t50dp"
+            android:layout_height="@dimen/t50dp"
+            android:padding="2dp"
+            android:src="@drawable/baseline_folder_24" />
 
-        <CheckBox
-            android:id="@+id/itemSelected"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:visibility="gone"
-            tools:visibility="visible"/>
-    </RelativeLayout>
+        <View
+            android:id="@+id/itemV1"
+            style="@style/divider_vertical"
+            android:layout_marginRight="@dimen/t5dp"
+            android:background="#080" />
 
-    <View
-        android:id="@+id/itemV1"
-        android:layout_width="@dimen/t3dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/itemThumb"
-        android:layout_marginRight="@dimen/t5dp"
-        android:background="#080"
-        android:layout_alignBottom="@id/itemThumb"
-        android:layout_toRightOf="@id/itemThumb" />
+        <LinearLayout
+            android:id="@+id/itemInfoArea"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_toLeftOf="@id/itemActions"
+            android:layout_toRightOf="@id/itemV1">
 
-    <TextView
-        android:id="@+id/itemTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/itemV1"
-        android:paddingVertical="@dimen/t5dp"
-        tools:text="File name"/>
+            <TextView
+                android:id="@+id/itemTitle"
+                style="@style/text_basic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:paddingVertical="3dp"
+                tools:text="File name\n456"/>
 
-    <TextView
-        android:id="@+id/itemInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/itemV1"
-        android:layout_below="@id/itemTitle"
-        tools:text="information" />
+            <TextView
+                android:id="@+id/itemInfo"
+                style="@style/text_basic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="information" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/itemActions"
+            android:layout_width="@dimen/t40dp"
+            android:layout_height="@dimen/t50dp"
+            android:layout_alignParentRight="true">
+
+            <ImageView
+                android:id="@+id/itemAction"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:src="@drawable/more_vert"/>
+
+            <CheckBox
+                android:id="@+id/itemSelected"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:buttonTint="#888"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+        </RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/sizePart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/itemInfo"
+        android:layout_below="@id/itemMain"
         android:paddingHorizontal="@dimen/t10dp">
         <ProgressBar
             android:id="@+id/itemSizeRate"
@@ -80,9 +92,20 @@
 
         <TextView
             android:id="@+id/itemSizeB"
+            style="@style/text_basic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/itemSizeRate"
             tools:text="3 Bytes"/>
     </RelativeLayout>
+
+    <View
+        android:id="@+id/itemV1"
+        style="@style/divider_horizontal"
+        android:layout_height="1dp"
+        android:layout_marginLeft="@dimen/t5dp"
+        android:layout_marginRight="@dimen/t5dp"
+        android:background="#444"
+        android:layout_below="@id/sizePart"/>
+
 </RelativeLayout>
