--- a/app/src/main/res/menu/view_file_menu.xml
+++ b/app/src/main/res/menu/view_file_menu.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/itemTitle"
+        tools:title="123"
         android:title=""/>
     <item
         android:id="@+id/itemSelect"
