--- a/app/src/main/res/layout/fragment_file.xml
+++ b/app/src/main/res/layout/fragment_file.xml
@@ -7,50 +7,48 @@
     android:layout_height="match_parent"
     android:background="#000">
 
-    <ImageView
-        android:id="@+id/filesAction"
-        android:layout_width="@dimen/t50dp"
-        android:layout_height="@dimen/t50dp"
-        android:padding="@dimen/t5dp"
-        android:src="@drawable/more_vert" />
-    <HorizontalScrollView
+    <RelativeLayout
         android:id="@+id/topbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/filesAction"
-        android:background="#fff">
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/backBtn"
+            style="@style/basicIcon"
+            android:background="@color/yellow"
+            android:src="@drawable/arrow_back"/>
+
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/reload"
-                style="@style/button"
-                android:text="@string/update"/>
-            <Button
-                android:id="@+id/createFolderBtn"
-                style="@style/button"
-                android:text="@string/actionCreateFolder"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal">
             <ImageView
-                android:id="@+id/pasteBtn"
-                android:layout_width="@dimen/t50dp"
-                android:layout_height="@dimen/t50dp"
-                android:background="@drawable/bg_item"
-                android:src="@drawable/baseline_folder_24"/>
-            <Button
+                android:id="@+id/reload"
+                style="@style/basicIcon"
+                android:src="@drawable/renew_white"/>
+            <ImageView
                 android:id="@+id/dfsSize"
-                style="@style/button"
-                android:text="@string/dfs_folder"/>
-            <Button
+                style="@style/basicIcon"
+                android:src="@drawable/analytics"/>
+            <ImageView
                 android:id="@+id/sortBtn"
-                style="@style/button"
-                android:text="@string/sort"/>
-            <Button
-                android:id="@+id/deleteBtn"
-                style="@style/button"
-                android:text="@string/file_menu_delete"/>
+                style="@style/basicIcon"
+                android:src="@drawable/sort"/>
+            <ImageView
+                android:id="@+id/filesAction"
+                style="@style/basicIcon"
+                android:src="@drawable/more_vert"/>
         </LinearLayout>
-    </HorizontalScrollView>
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/dfsProgress"
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:progress="50"
+            app:trackColor="#8fff"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_alignBottom="@id/backBtn"/>
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/folderPath"
