--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,4 +39,14 @@
         <item name="android:layout_height">@dimen/t50dp</item>
         <item name="android:padding">@dimen/t5dp</item>
     </style>
+
+    <style name="storageItem">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:padding">@dimen/t10dp</item>
+        <item name="android:textColor">#ddd</item>
+        <item name="android:background">@drawable/bg_sky</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
