--- a/app/src/main/res/layout/fragment_file.xml
+++ b/app/src/main/res/layout/fragment_file.xml
@@ -31,9 +31,17 @@
             android:layout_alignParentRight="true"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/onTop"
+                style="@style/basicIcon"
+                android:src="@drawable/arrow_back"
+                android:background="@drawable/bg_sky"
+                android:rotation="90"/>
+            <ImageView
                 android:id="@+id/reload"
                 style="@style/basicIcon"
-                android:src="@drawable/renew_white"/>
+                android:src="@drawable/renew_white"
+                android:visibility="gone"
+                tools:visibility="visible"/>
             <ImageView
                 android:id="@+id/dfsSize"
                 style="@style/basicIcon"
